# app

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  README.md  main.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  shortcuts.rs  state.rs  tray.rs
src-tauri/src/commands/: chat.rs  documents.rs  mod.rs  stores.rs  window.rs
src-tauri/src/db/: connection.rs  documents.rs  migrations.rs  mod.rs  stores.rs
src-tauri/src/gemini/: client.rs  mod.rs  types.rs
src-tauri/src/polling/: document_status.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/sync/: background_sync.rs  mod.rs
src-tauri/src/window/: macos.rs  mod.rs
src/assets/stylesheets/: main.tailwind.css
src/components/: ActionButton.vue  ConfirmDeleteButton.vue  KeyboardHint.vue
src/composables/: useAiChat.js  useFileSelection.js  useGlobalKeyboard.js  useHomeSettings.js  useListNavigation.js  useLocaleSelector.js  useStoreDetail.js  useStoreForm.js  useStoreList.js  useUpdater.js  useWindowDrag.js
src/config/: i18n.js  routes.js
src/locales/: en.js  ja.js  zh-TW.js
src/stores/: app.js  auth.js  chat.js  locale.js  stores.js
src/utils/: constants.js  helpers.js  icons.js
src/views/chats/: show.vue
src/views/home/: index.vue
src/views/layout/: application.vue
src/views/settings/api-key/: index.vue
src/views/stores/: index.vue  new.vue  show.vue
(+1 files in other folders)
